Initial Commit: Working Repo
This is the working condition of the repo that is need of editing and refactor before final testing.

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,27 @@
 *.exe
 *.out
 *.app
+
+# Directories
+build
+
+# Output files
+Utils/Outputs/*.txt
+
+# MacOS Artifact
+.DS_Store
+
+# CMake
+CMakeLists.txt.user
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+_deps
+CMakeUserPresets.json
+**/*.cmake
