--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,7 +18,18 @@ include_directories(${ARMADILLO_INCLUDE_DIRS})
 # Add libraries built from Source/*.cpp
 add_library(Atom ./Source/Atom.cpp)
 add_library(AtomReader ./Source/AtomReader.cpp)
-add_library(Molecule ./Source/Molecule.cpp)
+add_library(Molecule_init ./Source/Molecule_init.cpp)
+add_library(Molecule_utils ./Source/Molecule_utils.cpp)
+add_library(Molecule_overlap ./Source/Molecule_overlap.cpp)
+add_library(Molecule_hartreeFock ./Source/Molecule_hartreeFock.cpp)
+
+# Link librarues, Ensure Armadillo is linked with these targets
+target_link_libraries(Molecule_hartreeFock PRIVATE 
+                                ${ARMADILLO_LIBRARIES}
+                                Molecule_init 
+                                Molecule_utils
+                                Molecule_overlap)
+target_link_libraries(AtomReader PRIVATE Atom )
 
 # Add executables for tests
 add_executable(SCF_test ./Test/SCF_test.cpp)
@@ -26,12 +37,7 @@ add_executable(SCF_test ./Test/SCF_test.cpp)
 # Link libraries to tests and include necessary directories
 target_include_directories(Atom PRIVATE ./Include)
 target_include_directories(AtomReader PRIVATE ./Include)
-target_include_directories(Molecule PRIVATE ./Include)
-
-# Ensure Armadillo is linked with these targets
-target_link_libraries(Molecule PRIVATE ${ARMADILLO_LIBRARIES})
-target_link_libraries(AtomReader PRIVATE Atom )
-
+target_include_directories(Molecule_hartreeFock PRIVATE ./Include)
 
 # Link executables to their respective libraries and Armadillo
-target_link_libraries(SCF_test PRIVATE AtomReader Molecule)
+target_link_libraries(SCF_test PRIVATE AtomReader Molecule_hartreeFock)
